# test

./: db.sqlite3  pyproject.toml
accommodations/: models.py
accommodations/management/commands/: create_dummy_accommodations.py
accommodations/migrations/: 0001_initial.py
accommodations/serializers/: accommodation_serializer.py
accommodations/views/: accommodation_views.py
amenities/: models.py
bookings/: models.py
common/util/email/services/: email_service.py  otp_service.py
config/: settings.py  urls.py
pages/serializers/: booking_request_serializer.py  booking_status_serializer.py  hotel_serializer.py  main_serializer.py  room_serializer.py
pages/views/: booking_request_view.py  booking_status_view.py  hotel_view.py  main_view.py  room_view.py
rooms/: models.py
users/: models.py  urls.py
users/management/commands/: create_dummy_users.py
users/managers/: user_manager.py
users/migrations/: 0002_alter_user_user_type.py
users/serializers/: ui_booking_user_serializer.py  user_serializer.py
users/views/: user_view.py
