[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["SongMihyun <idblackcat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
faker = "^30.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
